--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="" />
 	<link rel="icon" href="%svelte.assets%/favicon.png" />
 	<link rel="stylesheet" href="/css/fonts.css" />
+	<link rel="stylesheet" href="/css/code.css" />
 	<link rel="stylesheet" href="/css/media.css" />
 	<link rel="stylesheet" href="/css/styles.css" />
 	<link rel="stylesheet" href="/css/form.css" />
