--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="/css/code.css" />
 	<link rel="stylesheet" href="/css/media.css" />
 	<link rel="stylesheet" href="/css/styles.css" />
+	<link rel="stylesheet" href="/css/animate.css" />
 	<link rel="stylesheet" href="/css/form.css" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
