add 5 CSS examples
- update roadmap

--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="/css/styles.css" />
 	<link rel="stylesheet" href="/css/animate.css" />
 	<link rel="stylesheet" href="/css/form.css" />
+	<link rel="stylesheet" href="/css/examples/ex1.css" id="examples" />
 	<link rel="stylesheet" href="/css/media.css" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
